--- a/.private.example
+++ b/.private.example
@@ -8,3 +8,5 @@ export GIT_AUTHOR_NAME="Your Name"
 export GIT_AUTHOR_EMAIL="your@email.com"
 export GIT_COMMITTER_NAME="$GIT_AUTHOR_NAME"
 export GIT_COMMITTER_EMAIL="$GIT_AUTHOR_EMAIL"
+
+export HOMEBREW_GITHUB_API_TOKEN="YOUR TOKEN"
