--- a/arch/i3.conf
+++ b/arch/i3.conf
@@ -18,36 +18,17 @@
 font pango:DejaVu Sans Mono 8
 #font pango:System San Francisco Display 16
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
-
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
 
 # start a terminal
 bindsym Mod1+Return exec i3-sensible-terminal
-#bindsym Mod1+Return exec urxvt -depth 32 -bg rgba:2220/2220/2220/dddd
 
 # kill focused window
 bindsym Mod4+q kill
 
 # Lock
-#bindsym Mod1+Shift+x exec i3lock --color 333333
-
-# start dmenu (a program launcher)
-#bindsym Mod1+d exec dmenu_run -fn "Monospace:30"
-
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
-#bindsym Mod1+space exec --no-startup-id i3-dmenu-desktop
-#bindsym Mod1+space exec --no-startup-id dmenu_run -fn "Monospace:30"
-
+bindsym Mod1+Shift+x exec i3lock --color 333333
 
 # change focus window
 bindsym Mod1+Left focus left
@@ -94,8 +75,8 @@ bindsym Mod1+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym Mod1+minus scratchpad show
 
-set $workspace1 "1"
-set $workspace2 "2:Firefox"
+set $workspace1 "1:term"
+set $workspace2 "2:firefox"
 set $workspace3 "3"
 set $workspace4 "4"
 set $workspace5 "5"
@@ -137,7 +118,6 @@ bindsym Mod1+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym Mod1+Shift+r restart
 # exit i3 (logs you out of your X session)
-#bindsym Mod4+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 bindsym Mod4+Shift+q exec "i3-msg exit"
 
 # resize window (you can also use the mouse for that)
@@ -165,6 +145,8 @@ bindsym Mod1+r mode "resize"
 bar {
   position top
   status_command i3status
+  # Requires ttf-font-awesome
+  font pango:DejaVu Sans Mono, Awesome 8
 }
 
 # not sure if needed
@@ -181,28 +163,11 @@ bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle; killall -S
 #bindsym XF86AudioNext exec playerctl next
 #bindsym XF86AudioPrev exec playerctl previous
 
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-#exec i3-config-wizard
-
-# Enable automounting with devmon/udevil
-#exec --no-startup-id "devmon --no-gui"
-
 # Enable albert (alfred like) - need to set config hotkey
 #exec --no-startup-id "albert"
 
 # Enable Rofi
 bindsym Mod1+space exec --no-startup-id rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0 -bc "#2f343f" -bg "#2f343f" -fg "#f3f4f5" -hlbg "#2f343f" -hlfg "#9575cd" -font "System San Francisco Display 24"
-
-# Set startup/default brightness
-#exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; echo 196 | sudo tee brightness"
 
 # screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; cur=$(cat brightness); cur=$((cur-20)) ; if [ $cur -lt 1 ]; then cur=5; fi; echo $cur | sudo tee brightness "
@@ -211,10 +176,6 @@ bindsym XF86MonBrightnessUp   exec --no-startup-id "cd /sys/class/backlight/gmux
 # keyboard brightness
 bindsym XF86KbdBrightnessDown exec --no-startup-id "cd /sys/class/leds/smc::kbd_backlight; cur=$(cat brightness); cur=$((cur-5)); if [ $cur -lt 0 ]; then cur=0; fi; echo $cur | sudo tee brightness "
 bindsym XF86KbdBrightnessUp   exec --no-startup-id "cd /sys/class/leds/smc::kbd_backlight; cur=$(cat brightness); cur=$((cur+5)); if [ $cur -gt 255 ]; then cur=255; fi; echo $cur | sudo tee brightness "
-
-# Copy / Paste - using urxvt instead
-#bindsym Mod4+c exec xclip -o -selection clipboard | xclip
-#bindsym Mod4+v exec xclip -o | xclip -i selection clipboard
 
 # Disable titlebars
 for_window [class="^.*"] border pixel 0
@@ -226,19 +187,11 @@ gaps inner $default_gaps_inner
 gaps outer $default_gaps_outer
 smart_gaps on
 
-# Wallpaper
+# Load wallpaper
 exec_always --no-startup-id feh --bg-scale $HOME/.wallpaper.jpg
 
-# Startup config
-#exec i3-sensible-terminal
-#exec urxvt -depth 32 -bg rgba:2220/2220/2220/dddd
-
-# Start composition manager
-#exec xcompmgr -c -f -n
-exec --no-startup-id compton
-
+# Start compton manager
+exec --no-startup-id compton &
 
 # Monitors
 #exec_always --no-startup-id xrandr --output HDMI-0 --off --output DVI-I-1 --off --output DVI-I-3 --mode 1920x1080 --pos 0x0 --rotate normal --output DVI-I-2 --mode 1920x1080 -rotate normal
-
-exec_always --no-startup-id firefox
