Updated i3 and i3status config

--- a/arch/i3.conf
+++ b/arch/i3.conf
@@ -9,6 +9,9 @@
 # layout, use the i3-config-wizard
 #
 
+set $mod Mod1  # option
+set $mod2 Mod4 # command
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 16
@@ -167,7 +170,7 @@ bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle; killall -S
 #exec --no-startup-id "albert"
 
 # Enable Rofi
-bindsym Mod1+space exec --no-startup-id rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0 -bc "#2f343f" -bg "#2f343f" -fg "#f3f4f5" -hlbg "#2f343f" -hlfg "#9575cd" -font "System San Francisco Display 24"
+bindsym Mod1+space exec rofi -show run
 
 # screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; cur=$(cat brightness); cur=$((cur-20)) ; if [ $cur -lt 1 ]; then cur=5; fi; echo $cur | sudo tee brightness "
