--- a/arch/.i3status.conf
+++ b/arch/.i3status.conf
@@ -17,6 +17,7 @@ order += "disk /"
 #order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "volume master"
 order += "battery 0"
 order += "load"
 order += "tztime local"
@@ -36,12 +37,18 @@ battery 0 {
         format = "%status %percentage %remaining"
 }
 
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
+# run_watch DHCP {
+#         pidfile = "/var/run/dhclient*.pid"
+# }
 
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+# run_watch VPN {
+#         pidfile = "/var/run/vpnc/pid"
+# }
+
+volume master {
+    format = "%volume"
+    format_muted = "muted (%volume)"
+    device = "pulse"
 }
 
 tztime local {
