--- a/arch/i3.conf
+++ b/arch/i3.conf
@@ -198,3 +198,5 @@ exec --no-startup-id compton &
 
 # Monitors
 #exec_always --no-startup-id xrandr --output HDMI-0 --off --output DVI-I-1 --off --output DVI-I-3 --mode 1920x1080 --pos 0x0 --rotate normal --output DVI-I-2 --mode 1920x1080 -rotate normal
+
+# vim:filetype=i3
