Comment out i3-gaps config by default

--- a/arch/i3.conf
+++ b/arch/i3.conf
@@ -186,9 +186,9 @@ for_window [class="^.*"] border pixel 0
 # Gaps (i3-gaps-git)
 set $default_gaps_inner 30
 set $default_gaps_outer 30
-gaps inner $default_gaps_inner
-gaps outer $default_gaps_outer
-smart_gaps on
+# gaps inner $default_gaps_inner
+# gaps outer $default_gaps_outer
+# smart_gaps on
 
 # Load wallpaper
 exec_always --no-startup-id feh --bg-scale $HOME/.wallpaper.jpg
