--- a/arch/i3.conf
+++ b/arch/i3.conf
@@ -1,25 +1,13 @@
 # i3 config file (v4)
-#
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-#
-# This config file uses keycodes (bindsym) and was written for the QWERTY
-# layout.
-#
-# To get a config file with the same key positions, but for your current
-# layout, use the i3-config-wizard
-#
 
-set $mod Mod1  # option
-set $mod2 Mod4 # command
+# Set primary mod key (option key)
+set $mod Mod1
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-#font pango:monospace 16
+# Set secondary mod key (command key)
+set $mod2 Mod
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
+# Font for window titles
 font pango:DejaVu Sans Mono 8
-#font pango:System San Francisco Display 16
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -123,7 +111,6 @@ bindsym Mod1+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym Mod4+Shift+q exec "i3-msg exit"
 
-# resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
@@ -143,12 +130,9 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
 bar {
   position top
   status_command i3status
-  # Requires ttf-font-awesome
   font pango:DejaVu Sans Mono, Awesome 8
 }
 
@@ -156,34 +140,34 @@ bar {
 hide_edge_borders both
 
 # Audio controls
+# requires alsa-utils
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer set Master unmute; amixer set Master 5%+; killall -SIGUSR1 i3status"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer set Master unmute; amixer set Master 5%-; killall -SIGUSR1 i3status"
 bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle; killall -SIGUSR1 i3status"
 
 # Media player controls
+# requires playerctl (AUR)
 #bindsym XF86AudioPlay exec playerctl play
 #bindsym XF86AudioPause exec playerctl pause
 #bindsym XF86AudioNext exec playerctl next
 #bindsym XF86AudioPrev exec playerctl previous
 
-# Enable albert (alfred like) - need to set config hotkey
-#exec --no-startup-id "albert"
-
 # Enable Rofi
 bindsym Mod1+space exec rofi -show run
 
-# screen brightness
+# screen brightness (macbook)
 bindsym XF86MonBrightnessDown exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; cur=$(cat brightness); cur=$((cur-20)) ; if [ $cur -lt 1 ]; then cur=5; fi; echo $cur | sudo tee brightness "
 bindsym XF86MonBrightnessUp   exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; cur=$(cat brightness); cur=$((cur+20)) ; if [ $cur -gt 1023 ]; then cur=1023; fi; echo $cur | sudo tee brightness "
 
-# keyboard brightness
+# keyboard brightness (macbook)
 bindsym XF86KbdBrightnessDown exec --no-startup-id "cd /sys/class/leds/smc::kbd_backlight; cur=$(cat brightness); cur=$((cur-5)); if [ $cur -lt 0 ]; then cur=0; fi; echo $cur | sudo tee brightness "
 bindsym XF86KbdBrightnessUp   exec --no-startup-id "cd /sys/class/leds/smc::kbd_backlight; cur=$(cat brightness); cur=$((cur+5)); if [ $cur -gt 255 ]; then cur=255; fi; echo $cur | sudo tee brightness "
 
 # Disable titlebars
 for_window [class="^.*"] border pixel 0
 
-# Gaps (i3-gaps-git)
+# i3-gaps
+# requires i3-gaps (AUR)
 set $default_gaps_inner 30
 set $default_gaps_outer 30
 # gaps inner $default_gaps_inner
