Fixed gitconfig incomptability with url rewriting

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,5 +27,5 @@
 	autosetuprebase = always
 [advice]
 	statusHints = true
-[url "git@github.com:"]
-	insteadOf = https://github.com/
+[url "git@github.com:blakejakopovic"]
+	insteadOf = https://github.com/blakejakopovic/
