--- a/.gitconfig
+++ b/.gitconfig
@@ -1,31 +1,31 @@
 [core]
-	editor = nano
-	excludesfile = ~/.gitignore_global
-	quotepath = false
+  editor = vim
+  excludesfile = ~/.gitignore_global
+  quotepath = false
 [alias]
-	b = branch
-	s = status
-	ls = ls-files
-	c = commit
-	cm = commit --message
-	ch = checkout
-	rs = rebase --squash --interactive
-	ms = merge --squash
-	smu = submodule update --init --recursive
-	l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
-	ap = add --patch
-	update-timestamp = commit --amend --reset-author
+  b = branch
+  s = status
+  ls = ls-files
+  c = commit
+  cm = commit --message
+  ch = checkout
+  rs = rebase --squash --interactive
+  ms = merge --squash
+  smu = submodule update --init --recursive
+  l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
+  ap = add --patch
+  update-timestamp = commit --amend --reset-author
 [color]
-	branch = auto
-	diff = auto
-	interactive = auto
-	status = auto
-	ui = true
+  branch = auto
+  diff = auto
+  interactive = auto
+  status = auto
+  ui = true
 [push]
-	default = current
+  default = current
 [branch]
-	autosetuprebase = always
+  autosetuprebase = always
 [advice]
-	statusHints = true
+  statusHints = true
 [url "git@github.com:blakejakopovic"]
-	insteadOf = https://github.com/blakejakopovic/
+  insteadOf = https://github.com/blakejakopovic/
