Add QLColorCode config to OS X defaults

--- a/linux/i3.conf
+++ b/linux/i3.conf
@@ -3,70 +3,70 @@
 # i3 config file (v4)
 
 # Set primary mod key (option key)
-set $mod Mod1
+set $alt Mod1
 
 # Set secondary mod key (command key)
-set $mod2 Mod
+set $super Mod4
 
 # Font for window titles
 font pango:DejaVu Sans Mono 8
 
-# use Mouse+Mod1 to drag floating windows to their wanted position
-floating_modifier Mod1
+# use Mouse+$alt to drag floating windows to their wanted position
+floating_modifier $alt
 
 # start a terminal
-bindsym Mod1+Return exec i3-sensible-terminal
+bindsym $alt+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym Mod4+q kill
+bindsym $super+q kill
 
 # Lock
-bindsym Mod1+Shift+x exec i3lock --color 333333
+bindsym $alt+Shift+x exec i3lock --color 333333
 
 # change focus window
-bindsym Mod1+Left focus left
-bindsym Mod1+Down focus down
-bindsym Mod1+Up focus up
-bindsym Mod1+Right focus right
+bindsym $alt+Left focus left
+bindsym $alt+Down focus down
+bindsym $alt+Up focus up
+bindsym $alt+Right focus right
 
 # move focused window
-bindsym Mod1+Shift+Left move left
-bindsym Mod1+Shift+Down move down
-bindsym Mod1+Shift+Up move up
-bindsym Mod1+Shift+Right move right
+bindsym $alt+Shift+Left move left
+bindsym $alt+Shift+Down move down
+bindsym $alt+Shift+Up move up
+bindsym $alt+Shift+Right move right
 
 # split in horizontal orientation
-bindsym Mod1+h split h
+bindsym $alt+h split h
 
 # split in vertical orientation
-bindsym Mod1+v split v
+bindsym $alt+v split v
 
 # enter fullscreen mode for the focused container
-bindsym Mod1+f fullscreen toggle
+bindsym $alt+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym Mod1+s layout stacking
-bindsym Mod1+w layout tabbed
-bindsym Mod1+e layout toggle split
+bindsym $alt+s layout stacking
+bindsym $alt+w layout tabbed
+bindsym $alt+e layout toggle split
 
 # toggle tiling / floating
-bindsym Mod1+Shift+space floating toggle
+bindsym $alt+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-#bindsym Mod1+space focus mode_toggle
+#bindsym $alt+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod1+a focus parent
+bindsym $alt+a focus parent
 
 # focus the child container
-#bindsym Mod1+d focus child
+#bindsym $alt+d focus child
 
 # move the currently focused window to the scratchpad
-bindsym Mod1+Shift+minus move scratchpad
+bindsym $alt+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym Mod1+minus scratchpad show
+bindsym $alt+minus scratchpad show
 
 set $workspace1 "1:term"
 set $workspace2 "2:firefox"
@@ -83,35 +83,35 @@ set $workspace10 "10"
 assign[class="Firefox"] $workspace2
 
 # switch to workspace
-bindsym Mod1+1 workspace $workspace1
-bindsym Mod1+2 workspace $workspace2
-bindsym Mod1+3 workspace $workspace3
-bindsym Mod1+4 workspace $workspace4
-bindsym Mod1+5 workspace $workspace5
-bindsym Mod1+6 workspace $workspace6
-bindsym Mod1+7 workspace $workspace7
-bindsym Mod1+8 workspace $workspace8
-bindsym Mod1+9 workspace $workspace9
-bindsym Mod1+0 workspace $workspace10
+bindsym $alt+1 workspace $workspace1
+bindsym $alt+2 workspace $workspace2
+bindsym $alt+3 workspace $workspace3
+bindsym $alt+4 workspace $workspace4
+bindsym $alt+5 workspace $workspace5
+bindsym $alt+6 workspace $workspace6
+bindsym $alt+7 workspace $workspace7
+bindsym $alt+8 workspace $workspace8
+bindsym $alt+9 workspace $workspace9
+bindsym $alt+0 workspace $workspace10
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace $workspace1
-bindsym Mod1+Shift+2 move container to workspace $workspace2
-bindsym Mod1+Shift+3 move container to workspace $workspace3
-bindsym Mod1+Shift+4 move container to workspace $workspace4
-bindsym Mod1+Shift+5 move container to workspace $workspace5
-bindsym Mod1+Shift+6 move container to workspace $workspace6
-bindsym Mod1+Shift+7 move container to workspace $workspace7
-bindsym Mod1+Shift+8 move container to workspace $workspace8
-bindsym Mod1+Shift+9 move container to workspace $workspace9
-bindsym Mod1+Shift+0 move container to workspace $workspace10
+bindsym $alt+Shift+1 move container to workspace $workspace1
+bindsym $alt+Shift+2 move container to workspace $workspace2
+bindsym $alt+Shift+3 move container to workspace $workspace3
+bindsym $alt+Shift+4 move container to workspace $workspace4
+bindsym $alt+Shift+5 move container to workspace $workspace5
+bindsym $alt+Shift+6 move container to workspace $workspace6
+bindsym $alt+Shift+7 move container to workspace $workspace7
+bindsym $alt+Shift+8 move container to workspace $workspace8
+bindsym $alt+Shift+9 move container to workspace $workspace9
+bindsym $alt+Shift+0 move container to workspace $workspace10
 
 # reload the configuration file
-bindsym Mod1+Shift+c reload
+bindsym $alt+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+r restart
+bindsym $alt+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym Mod4+Shift+q exec "i3-msg exit"
+bindsym $super+Shift+q exec "i3-msg exit"
 
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -130,7 +130,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym Mod1+r mode "resize"
+bindsym $alt+r mode "resize"
 
 bar {
   position top
@@ -155,7 +155,7 @@ bindsym XF86AudioMute exec --no-startup-id "amixer set Master toggle; killall -S
 #bindsym XF86AudioPrev exec playerctl previous
 
 # Enable Rofi
-bindsym Mod1+space exec rofi -show run
+bindsym $alt+space exec rofi -show run
 
 # screen brightness (macbook)
 bindsym XF86MonBrightnessDown exec --no-startup-id "cd /sys/class/backlight/gmux_backlight/; cur=$(cat brightness); cur=$((cur-20)) ; if [ $cur -lt 1 ]; then cur=5; fi; echo $cur | sudo tee brightness "
