--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
   l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
   ap = add --patch
   update-timestamp = commit --amend --reset-author
-	dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy | less --tabs=4 -RFX; }; f"
+  dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy | less --tabs=4 -RFX; }; f"
 [color]
   branch = auto
   diff = auto
@@ -30,3 +30,5 @@
   statusHints = true
 [url "git@github.com:blakejakopovic"]
   insteadOf = https://github.com/blakejakopovic/
+[include]
+  path = ~/.gituserconfig
