Updated comment in linux/i3.conf

--- a/linux/i3.conf
+++ b/linux/i3.conf
@@ -2,7 +2,7 @@
 
 # i3 config file (v4)
 
-# Set primary mod key (option key)
+# Set primary mod key (alt key)
 set $alt Mod1
 
 # Set secondary mod key (command key)
