Added default wallpaper

--- a/linux/i3.conf
+++ b/linux/i3.conf
@@ -177,7 +177,7 @@ set $default_gaps_outer 30
 # smart_gaps on
 
 # Load wallpaper
-exec_always --no-startup-id feh --bg-scale $HOME/.wallpaper.jpg
+exec_always --no-startup-id feh --bg-scale $HOME/.wallpaper
 
 # Start compton manager
 exec --no-startup-id compton &
