Added MPV fuzzy subtitle matching defaulting to english

--- a/mpv.conf
+++ b/mpv.conf
@@ -93,8 +93,8 @@ autofit-larger=90%x90%
 #demuxer-readahead-secs=5.0
 
 # Display English subtitles if available.
-#slang=en
-slang=xx
+slang=en
+#slang=xx
 
 # Play Finnish audio if available, fall back to English otherwise.
 #alang=fi,en
@@ -128,8 +128,9 @@ hwdec=auto
 # SUBTITLES
 #######################
 # Disable subtitles from auto-loading
-sid=no
+#sid=no
 
+sub-auto=fuzzy
 
 # You can also include other configuration files.
 #include=/path/to/the/file/you/want/to/include
