--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
   editor = vim
   excludesfile = ~/.gitignore_global
   quotepath = false
+  attributesfile = /Users/blakejakopovic/.gitattributes
 [alias]
   a = !git config --get-regexp 'alias.*' | colrm 1 6 | sed 's/[ ]/ = /' | sort
   b = branch
